--- a/footmania2.html
+++ b/footmania2.html
@@ -15,9 +15,13 @@
 
 
 </html>
+
 <script type="application/javascript" src="Script/jquery-2.2.2.min.js"></script>
 <script type="application/javascript" src="Script/Box2d.min.js"></script>
 <script type="application/javascript" src="Script/Physic.js"></script>
 <script type="application/javascript" src="Script/AssetManager.js"></script>
 <script type="application/javascript" src="Script/SpriteClass.js"></script>
 <script type="application/javascript" src="Script/game.js"></script>
+<script type="application/javascript" src="Script/modernizr.js"></script>
+<script type="application/javascript" src="Script/hammer.min.js"></script>
+<script type="application/javascript" src="Script/hammer-time.min.js"></script>
